Add slide effect to gallery.

--- a/index.html
+++ b/index.html
@@ -59,12 +59,21 @@
 
     <section id="content">
       <div class="gallery">
-        <section class="slide">
-          <img src="./assets/images/food4.png" alt="food1">
-          <a href="#">
-            <h1>Read, Learn, Share</h1>
-            <h2>Pariatur Lorem sunt veniam culpa ullamco .</h2>
-          </a>
+        <section class="slides">
+          <div class="slide1">
+            <img src="./assets/images/food2.png" alt="food1">
+            <a href="#">
+              <h1>Read, Learn, Share</h1>
+              <h2>Pariatur Lorem sunt veniam culpa ullamco .</h2>
+            </a>
+          </div>
+          <div class="slide2">
+            <img src="./assets/images/food3.png" alt="food1">
+            <a href="#">
+              <h1>Read, Learn, Share</h1>
+              <h2>Pariatur Lorem sunt veniam culpa ullamco .</h2>
+            </a>
+          </div>
         </section>
         <nav>
           <ul>
