Step1: Add simple html block and border.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>react demo bolierplate</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="wrap">
+      <section id="menu"></section>
+      <section id="content"></section>
+    </div>
+    <footer></footer>
   </body>
 </html>
