Step 2: Add menu  with lorem text.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,27 @@
   </head>
   <body>
     <div id="wrap">
-      <section id="menu"></section>
+      <section id="menu">
+        <div id="logo">Logo</div>
+        <nav>
+          <ul>
+            <li>Books</li>
+            <li>Books</li>
+            <li>Books</li>
+            <li>Books</li>
+            <li>Books</li>
+          </ul>
+        </nav>
+        <div id="contacts">
+          <div class="contact-item">
+            <button>Join the Conversation</button>
+          </div>
+          <div class="contact-item">
+            <p>Dolor commodo do laborum elit laborum veniam et ea reprehenderit enim culpa pariatur fugiat velit.</p>
+            <button>Join the Conversation</button>
+          </div>
+        </div>
+      </section>
       <section id="content"></section>
     </div>
     <footer></footer>
