Step 3: Add logo to menu.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <body>
     <div id="wrap">
       <section id="menu">
-        <div id="logo">Logo</div>
+        <div id="logo">
+          <img src="./assets/images/logo.png" alt="logo">
+        </div>
         <nav>
           <ul>
             <li>Books</li>
