--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
         </div>
         <nav>
           <ul>
-            <li>Books</li>
-            <li>Books</li>
-            <li>Books</li>
-            <li>Books</li>
-            <li>Books</li>
+            <li>TasteMaker</li>
+            <li>Blog</li>
+            <li>The A-List</li>
+            <li>Contribute</li>
+            <li>About</li>
           </ul>
         </nav>
         <div id="contacts">
           <div class="contact-item">
+            <h1>latest tweet</h1>
             <button>Join the Conversation</button>
           </div>
           <div class="contact-item">
+            <h1>latest tweet</h1>
             <p>Dolor commodo do laborum elit laborum veniam et ea reprehenderit enim culpa pariatur fugiat velit.</p>
             <button>Join the Conversation</button>
           </div>
