Step 7: Add icons to menu.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         </div>
         <nav>
           <ul>
-            <li>TasteMaker</li>
-            <li>Blog</li>
-            <li>The A-List</li>
-            <li>Contribute</li>
-            <li>About</li>
+            <li><i class="icon-spoon-knife"></i><span>TasteMaker</span></li>
+            <li><i class="icon-book"></i><span>Blog</span></li>
+            <li><i class="icon-clipboard"></i><span>The A-List</span></li>
+            <li><i class="icon-camera"></i><span>Contribute</span></li>
+            <li><i class="icon-contract"></i><span>About</span></li>
           </ul>
         </nav>
         <div id="contacts">
