Step 9: Add icons to contacts.

--- a/index.html
+++ b/index.html
@@ -22,12 +22,18 @@
         <div id="contacts">
           <div class="contact-item">
             <h1>latest tweet</h1>
-            <button>Join the Conversation</button>
+            <button>
+              <i class="icon-twitter"></i>
+              <span>Join the Conversation</span>
+            </button>
           </div>
           <div class="contact-item">
-            <h1>latest tweet</h1>
+            <h1>let's be friends!</h1>
             <p>Dolor commodo do laborum elit laborum veniam et ea reprehenderit enim culpa pariatur fugiat velit.</p>
-            <button>Join the Conversation</button>
+            <button>
+              <i class="icon-facebook"></i>
+              <span>Join the Conversation</span>
+            </button>
           </div>
         </div>
       </section>
