Step 9: Add pure css slider.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,37 @@
           </div>
         </div>
       </section>
-      <section id="content"></section>
+
+      <section id="content">
+        <div class="gallery">
+          <input type="radio" name="slides" id="radio-1" checked>
+          <input type="radio" name="slides" id="radio-2">
+          <input type="radio" name="slides" id="radio-3">
+          <input type="radio" name="slides" id="radio-4">
+          <div class="slides">
+            <img src="./assets/images/food1.png" alt="food">
+            <img src="./assets/images/food2.png" alt="food">
+            <img src="./assets/images/food3.png" alt="food">
+            <img src="./assets/images/food4.png" alt="food">
+          </div>
+          <nav>
+            <ul>
+              <li>
+                <label for="radio-1" id="labelForRadio-1">TasteMaker</label>
+              </li>
+              <li>
+                <label for="radio-2" id="labelForRadio-2">Blog</label>
+              </li>
+              <li>
+                <label for="radio-3" id="labelForRadio-3">The A-List</label>
+              </li>
+              <li>
+                <label for="radio-4" id="labelForRadio-4">Contribute</label>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </section>
     </div>
     <footer></footer>
   </body>
