Step 11: Add subscribtion.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
             </ul>
           </nav>
         </div>
+
+        <div class="subscribe">
+          <i class="icon-mail"></i>
+          <p class="tip">Voluptate aliqua eu esse liat. ute anim non. Amet enim eiusmod consequat id id esse fugiat cillum et ea. Eiusmod in exercitation nisi ad id aute officia duis velit deserunt id.</p>
+          <form>
+            <input type="email" placeholder="Email">
+            <input type="button" value="Subscribe">
+          </form>
+        </div>
       </section>
     </div>
     <footer></footer>
