--- a/index.html
+++ b/index.html
@@ -125,6 +125,17 @@
         </div>
       </section>
     </div>
-    <footer></footer>
+    <footer>
+      <div class="left-link">
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms of Use</a>
+        <a href="#">Contact</a>
+      </div>
+      <div class="right-link">
+        <a href="#"><i class="icon-twitter"></i></a>
+        <a href="#"><i class="icon-facebook"></i></a>
+        <a href="#"><i class="icon-rss"></i></a>
+      </div>
+    </footer>
   </body>
 </html>
