--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>react demo bolierplate</title>
+    <title>HTML5 Training Demos</title>
   </head>
   <body>
-    <div id="root"></div>
+    <h1>Hello World</h1>
   </body>
 </html>
