--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
   </head>
   <body>
     <h1>Hello World</h1>
+    <div class='test'>
+      <span>test</span>
+    </div>
+    <script src='./app.js'></script>
   </body>
 </html>
