css3-demo6-1 init.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,38 @@
     <meta charset="utf-8">
     <title>HTML5 Training Demos</title>
   </head>
+  <script src='./app.js'></script>
   <body>
-    <h1>Hello World</h1>
-    <div class='test'>
-      <span>test</span>
+    <div id="wrap">
+      <section id="menu">
+        <div id="logo">
+          <img src="./assets/images/logo.png" alt="logo">
+        </div>
+        <nav>
+          <ul>
+            <li>TasteMaker</li>
+            <li>Blog</li>
+            <li>The A-List</li>
+            <li>Contribute</li>
+            <li>About</li>
+          </ul>
+        </nav>
+        <div id="contacts">
+          <div class="contact-item">
+            <h1>latest tweet</h1>
+            <button>Join the Conversation</button>
+          </div>
+          <div class="contact-item">
+            <h1>latest tweet</h1>
+            <p>Dolor commodo do laborum elit laborum veniam et ea reprehenderit enim culpa pariatur fugiat velit.</p>
+            <button>Join the Conversation</button>
+          </div>
+        </div>
+      </section>
+      <section id="content">
+        <i class="icon-mail"></i>
+      </section>
     </div>
-    <script src='./app.js'></script>
+    <footer></footer>
   </body>
 </html>
