css3-demo6-1-middle completed.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         </div>
         <nav>
           <ul>
-            <li>TasteMaker</li>
-            <li>Blog</li>
-            <li>The A-List</li>
-            <li>Contribute</li>
-            <li>About</li>
+            <li><i class="icon-spoon-knife"></i><span>TasteMaker</span></li>
+            <li><i class="icon-book"></i><span>Blog</span></li>
+            <li><i class="icon-clipboard"></i><span>The A-List</span></li>
+            <li><i class="icon-camera"></i><span>Contribute</span></li>
+            <li><i class="icon-address-book"></i><span>About</span></li>
           </ul>
         </nav>
         <div id="contacts">
@@ -32,9 +32,7 @@
           </div>
         </div>
       </section>
-      <section id="content">
-        <i class="icon-mail"></i>
-      </section>
+      <section id="content"></section>
     </div>
     <footer></footer>
   </body>
