--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>HTML5 Training Demos</title>
-  </head>
-  <body>
-    <h1>Hello World</h1>
-    <div class='test'>
-      <span>test</span>
-    </div>
-    <script src='./app.js'></script>
-  </body>
+	<head>
+		<meta charset="utf-8">
+		<title>Websocket API</title>
+	</head>
+	<body>
+		<button id='btn_start'>开始连接</button>
+		<table id='tableInfo'>
+				<tr>
+					<th>时间</th>
+					<th>球队</th>
+					<th>事件</th>
+					<th>比分</th>
+				</tr>
+		</table>
+	</body>
+	<script src='./app.js'></script>
 </html>
