--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <title>HTML5 Training Demos</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <div class='test'>
-      <span>test</span>
-    </div>
+    <h1>Full Screen API</h1>
+    
     <script src='./app.js'></script>
   </body>
 </html>
