--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Full Screen API</h1>
-    
+    <img id='myImg' src='./html5_css3.jpg' allowfullscreen=true />
     <script src='./app.js'></script>
   </body>
 </html>
