--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <title>HTML5 Training Demos</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <div class='test'>
-      <span>test</span>
+    <h1>addEventListener lifescope</h1>
+    <div id='top'>
+      top
+      <div id='innerTop'>
+        innerTop
+      </div>
+    </div>
+    <div id='bottom'>
+      Bottom
+      <div id='innerBottom'>
+        innerBottom
+      </div>
     </div>
     <script src='./app.js'></script>
   </body>
