--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   </head>
   <body>
     <h1>Hello World</h1>
-    <div class='test'>
-      <span>test</span>
+    <div class='normal'>
+      normal
+    </div>
+    <div class='special'>
+      special
     </div>
     <script src='./app.js'></script>
   </body>
