--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>HTML5 Training Demos</title>
   </head>
   <body>
-    <h1>纯css的tooltip功能</h1>
+    <h1>纯css的tooltip</h1>
     <div class='test'>
-      这里是Html5训练营，现在要展示的重点内容是<a title='这是一个用纯css打造的tooltip样式' href=#>attr属性</a>结合
-      <a title='我是伪类:after的tooltip'  href=#>伪类:after</a>共同打造出来的纯css的tooltip样式。
+      这里是Html5训练营，现在要展示的重点内容是<a data-title='这是一个用纯css打造的tooltip样式' href=#>attr属性</a>结合
+      <a data-title='我是伪类:after的tooltip'  href=#>伪类:after</a>共同打造出来的纯css的tooltip样式。
     </div>
     <script src='./app.js'></script>
   </body>
