--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>HTML5 Training Demos</title>
-  </head>
-  <body>
-    <h1>Hello World</h1>
-    <div class='test'>
-      <span>test</span>
-    </div>
-    <script src='./app.js'></script>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>HTML5 Training Demos</title>
+    </head>
+    <body>
+        <div class="content">
+            <p class="tips">请将需要显示的图片拖拽到下面的方框内.</p>
+            <p class="tips">
+                <a href="" id="download" download="ImageWithWaterMark">点我可以下载已经添加水印的图片</a>
+            </p>
+            <div id="imageWrap">
+                <canvas id="canvas"></canvas>
+            </div>
+        </div>
+        <script src='./app.js'></script>
+    </body>
 </html>
