--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     <body>
         <div class="content">
             <p class="tips">请将需要显示的图片拖拽到下面的方框内.</p>
-            <p class="tips">
-                <a href="" id="download" download="ImageWithWaterMark">点我可以下载已经添加水印的图片</a>
-            </p>
             <div id="imageWrap">
-                <canvas id="canvas"></canvas>
+                <img src="" id="imageViewer" />
             </div>
         </div>
         <script src='./app.js'></script>
