--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <title>HTML5 Training Demos</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <div class='test'>
-      <span>test</span>
+    <h1>纯css制作的三角形图标</h1>
+    <button type="button" id="btn" name="button">点击按钮</button>
+    <div id='divWithTriangle'>
+      这是一个具有指向性的弹出层
     </div>
     <script src='./app.js'></script>
   </body>
