--- a/index.html
+++ b/index.html
@@ -32,7 +32,22 @@
           </div>
         </div>
       </section>
-      <section id="content"></section>
+
+       <section id="content">
+        <div class="gallery">
+          <div class="slides">
+            <img src="./assets/images/food1.png" alt="food">
+          </div>
+          <nav>
+            <ul>
+              <li>TasteMaker</li>
+              <li>Blog</li>
+              <li>The A-List</li>
+              <li>Contribute</li>
+            </ul>
+          </nav>
+        </div>
+      </section>
     </div>
     <footer></footer>
   </body>
