css3-demo6-2-middle completed.

--- a/index.html
+++ b/index.html
@@ -33,17 +33,29 @@
         </div>
       </section>
 
-       <section id="content">
+      <section id="content">
         <div class="gallery">
+          <input type="radio" name="slides" id="radio-1">
+          <input type="radio" name="slides" id="radio-2">
+          <input type="radio" name="slides" id="radio-3">
+          <input type="radio" name="slides" id="radio-4">
           <div class="slides">
             <img src="./assets/images/food1.png" alt="food">
           </div>
           <nav>
             <ul>
-              <li>TasteMaker</li>
-              <li>Blog</li>
-              <li>The A-List</li>
-              <li>Contribute</li>
+              <li>
+                <label for="radio-1" id="labelForRadio-1">TasteMaker</label>
+              </li>
+              <li>
+                <label for="radio-2" id="labelForRadio-2">Blog</label>
+              </li>
+              <li>
+                <label for="radio-3" id="labelForRadio-3">The A-List</label>
+              </li>
+              <li>
+                <label for="radio-4" id="labelForRadio-4">Contribute</label>
+              </li>
             </ul>
           </nav>
         </div>
