css3-demo6-2 final completed.

--- a/index.html
+++ b/index.html
@@ -35,12 +35,15 @@
 
       <section id="content">
         <div class="gallery">
-          <input type="radio" name="slides" id="radio-1">
+          <input type="radio" name="slides" id="radio-1" checked>
           <input type="radio" name="slides" id="radio-2">
           <input type="radio" name="slides" id="radio-3">
           <input type="radio" name="slides" id="radio-4">
           <div class="slides">
             <img src="./assets/images/food1.png" alt="food">
+            <img src="./assets/images/food2.png" alt="food">
+            <img src="./assets/images/food3.png" alt="food">
+            <img src="./assets/images/food4.png" alt="food">
           </div>
           <nav>
             <ul>
