--- a/index.html
+++ b/index.html
@@ -62,6 +62,30 @@
             </ul>
           </nav>
         </div>
+
+        <div class="subscribe">
+          <i class="icon-mail"></i>
+          <p class="tip">Voluptate aliqua eu esse liat. ute anim non. Amet enim eiusmod consequat id id esse fugiat cillum et ea. Eiusmod
+            in exercitation nisi ad id aute officia duis velit deserunt id.</p>
+          <form>
+            <input type="email" placeholder="Email">
+            <input type="button" value="Subscribe">
+          </form>
+        </div>
+
+        <div class="blog">
+          <article>
+            <a class="header" href="#">
+              <img src="./assets/images/food2.png" alt="food">
+              <h1>how to make vegetable chips</h1>
+            </a>
+            <p>Duis cupidatat ea nulla incididunt irure ullamco mollit et do ipsum occaecat. Ut occaecat dolor nisi dolore dolore ullamco labore voluptate deserunt commodo. Adipisicing quis sunt nulla deserunt deserunt eiusmod sint consectetur minim. Magna occaecat magna elit est eu exercitation in reprehenderit eu nulla laboris. Ex eiusmod est velit laborum. Consectetur minim eiusmod enim fugiat aliquip. Ut laborum irure laborum nisi est cupidatat adipisicing elit eiusmod.</p>
+            <div class="meta">
+              <time>May 05, 2017 /</time>
+              <a>Read &raquo;</a>
+            </div>
+          </article>
+        </div>
       </section>
     </div>
     <footer></footer>
