--- a/index.html
+++ b/index.html
@@ -85,6 +85,39 @@
               <a>Read &raquo;</a>
             </div>
           </article>
+           <article>
+            <a class="header" href="#">
+              <img src="./assets/images/food3.png" alt="food">
+              <h1>how to make vegetable chips</h1>
+            </a>
+            <p>Duis cupidatat ea nulla incididunt irure ullamco mollit et do ipsum occaecat. Ut occaecat dolor nisi dolore dolore ullamco labore voluptate deserunt commodo. Adipisicing quis sunt nulla deserunt deserunt eiusmod sint consectetur minim. Magna occaecat magna elit est eu exercitation in reprehenderit eu nulla laboris. Ex eiusmod est velit laborum. Consectetur minim eiusmod enim fugiat aliquip. Ut laborum irure laborum nisi est cupidatat adipisicing elit eiusmod.</p>
+            <div class="meta">
+              <time>May 05, 2017 /</time>
+              <a>Read &raquo;</a>
+            </div>
+          </article>
+          <article>
+            <a class="header" href="#">
+              <img src="./assets/images/food1.png" alt="food">
+              <h1>how to make vegetable chips</h1>
+            </a>
+            <p>Duis cupidatat ea nulla incididunt irure ullamco mollit et do ipsum occaecat. Ut occaecat dolor nisi dolore dolore ullamco labore voluptate deserunt commodo. Adipisicing quis sunt nulla deserunt deserunt eiusmod sint consectetur minim. Magna occaecat magna elit est eu exercitation in reprehenderit eu nulla laboris. Ex eiusmod est velit laborum. Consectetur minim eiusmod enim fugiat aliquip. Ut laborum irure laborum nisi est cupidatat adipisicing elit eiusmod.</p>
+            <div class="meta">
+              <time>May 05, 2017 /</time>
+              <a>Read &raquo;</a>
+            </div>
+          </article>
+          <article>
+            <a class="header" href="#">
+              <img src="./assets/images/food5.png" alt="food">
+              <h1>how to make vegetable chips</h1>
+            </a>
+            <p>Duis cupidatat ea nulla incididunt irure ullamco mollit et do ipsum occaecat. Ut occaecat dolor nisi dolore dolore ullamco labore voluptate deserunt commodo. Adipisicing quis sunt nulla deserunt deserunt eiusmod sint consectetur minim. Magna occaecat magna elit est eu exercitation in reprehenderit eu nulla laboris. Ex eiusmod est velit laborum. Consectetur minim eiusmod enim fugiat aliquip. Ut laborum irure laborum nisi est cupidatat adipisicing elit eiusmod.</p>
+            <div class="meta">
+              <time>May 05, 2017 /</time>
+              <a>Read &raquo;</a>
+            </div>
+          </article>
         </div>
       </section>
     </div>
