--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML5 Training Demos</title>
   </head>
   <script src='./app.js'></script>
@@ -121,6 +122,17 @@
         </div>
       </section>
     </div>
-    <footer></footer>
+    <footer>
+      <div class="left-link">
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms of Use</a>
+        <a href="#">Contact</a>
+      </div>
+      <div class="right-link">
+        <a href="#"><i class="icon-twitter"></i></a>
+        <a href="#"><i class="icon-facebook"></i></a>
+        <a href="#"><i class="icon-rss"></i></a>
+      </div>
+    </footer>
   </body>
 </html>
