--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <title>HTML5 Training Demos</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <div class='test'>
-      <span>test</span>
-    </div>
+    <canvas id="canvas">Canvas is not supported in your browser.</canvas>
     <script src='./app.js'></script>
   </body>
 </html>
