--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <canvas id="canvas">Canvas is not supported in your browser.</canvas>
-    <script src='./app.js'></script>
+    <script src='./entry.js'></script>
   </body>
 </html>
