Finish double and quadra.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
     </head>
     <body>
         <div class="content">
-            <p class="tips">请将需要显示的图片拖拽到下面的方框内.</p>
-            <div id="imageWrap">
-                <img src="" id="imageViewer" />
+            <div class="box double">
+                <span class="item"></span>
+                <span class="item"></span>
+            </div>
+            <div class="box quadra">
+                <div class="column">
+                    <span class="item"></span>
+                    <span class="item"></span>
+                </div>
+                <div class="column">
+                    <span class="item"></span>
+                    <span class="item"></span>
+                </div>
             </div>
         </div>
         <script src='./app.js'></script>
