--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             <div class="box double">
                 <span class="item"></span>
                 <span class="item"></span>
+                <span class="item"></span>
             </div>
             <div class="box quadra">
                 <div class="column">
