--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML5 Training Demos</title>
+    <script src='./require.js' /></script>
+    <script src='./amdModule.js'></script>
+    <script src='./amd2.js'></script>
+    <script src='./umd.js'></script>
+    <script src='./amd3.js'></script>
   </head>
   <script src='./app.js'></script>
   <body>
